# XMonad-Config

./: .gitignore  README.md  cabal.project  xmonad-setup.cabal  xmonad-start
.xmonad/: session  volumeScript.hs  xmobar.hs  xmobarrc.config  xmobarrc.hs  xmonad-session-rc  xmonad-start  xmonad.hs
.xmonad/icons/: Fedora_2.xbm  Fedora_Icon.xbm  batt_idle.xbm  bright.xbm  cpu.xbm  layout_err.xbm  layout_full.xbm  layout_mirror.xbm  layout_tall.xbm  mem.xbm  skull.xbm  sound_0.xbm  sound_2.xbm  sound_7.xbm  sound_mute.xbm  wifi_0.xbm  wifi_1.xbm  wifi_5.xbm  wifi_7.xbm
.xmonad/lib/JonathasConceicao/: Brightness.hs  Notification.hs  PlayerView.hs  Util.hs  Volume.hs  Xmobar.hs
.xmonad/res/Wallpaper/: current
.xmonad/scripts/: lockscreen.sh  spotify_next.sh  spotify_prev.sh  spotify_toggle_play.sh
.xmonad/tools/: xmonadctl.hs
icons/: Fedora_Icon.xbm  batt.xbm  batt_on.xbm  cpu.xbm  layout_tall.xbm  mem.xbm  sound_0.xbm  sound_1.xbm  sound_5.xbm  sound_7.xbm
res/: picom.conf
res/Wallpaper/: current
scripts/: azlyrics_dunst_fetcher.hs  bluetooth_headset_connect.sh  bluetooth_headset_disconnect.sh  dunst_pause.sh  dunst_resume.sh  dunst_toggle.sh  fetch_wallpaper.sh  lockscreen.sh  monitor_off.sh  monitor_on.sh  spotify_pause.sh
src/: xmobar.hs  xmonad-display.hs  xmonad.hs
src/JonathasConceicao/: Brightness.hs  Notification.hs  PlayerView.hs  Util.hs  Volume.hs
